# Compilers

./: .arcconfig  .gitignore  README.md
lab1/compiler/: Makefile  c0c.cabal
lab1/compiler/src/: Args.hs  Compile.hs  MainTester.hs  c0c.hs
lab1/compiler/src/Compile/: CheckAST.hs  CodeGen.hs  Types.hs
lab1/compiler/src/Compile/Backend/: CodeGen.hs  ColorTemp.hs  Coloring.hs  GenAsm.hs  GenTwoOperand.hs  Interference.hs  LivePredicates.hs  Liveness.hs  MaximumCardinalitySearch.hs  Registers.hs  Spill.hs
lab1/compiler/src/Compile/Frontend/: CheckAST.hs  Parse.hs
lab1/compiler/src/Compile/Types/: AST.hs  AbstractAssembly.hs  Color.hs  Graph.hs  Ops.hs
lab1/compiler/src/Compile/Util/: AbstractAssembly.hs  Color.hs  Graph.hs
lab1/compiler/src/Text/: Parsec.hs
lab1/compiler/src/Text/Parsec/: Expr.hs  Language.hs  Prim.hs
lab5/compiler/: Makefile  README.md  c0c.cabal
lab5/compiler/src/: Args.hs  Compile.hs
lab5/compiler/src/Compile/Backend/: CodeGen.hs  ColorTemp.hs  GenAsm.hs  MaximumCardinalitySearch.hs  Neededness.hs  RegisterCoal.hs  Registers.hs  Squash.hs
lab5/compiler/src/Compile/Frontend/: CheckInitialization.hs  ConstantFold.hs  ConstantPropagate.hs  ElaborateStruct.hs  ElaborateType.hs  Parse.hs
lab5/compiler/src/Compile/IR/: CoalesceMoves.hs  GenIR.hs  GenIRAST.hs  InlineFn.hs
lab5/compiler/src/Compile/Types/: AbstractAssembly.hs  Graph.hs  IRAST.hs  IRExpr.hs  IdentType.hs  Job.hs  PostElabAST.hs
lab5/compiler/src/Compile/Util/: Assert.hs  Color.hs  Graph.hs  IdentTypeUtil.hs  Job.hs
lab5/compiler/src/Text/Parsec/: Expr.hs
(+5763 files in other folders)
